# SimplestBittorrentClient

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake-single-platform.yml
tests/: test_BencodeParser.cpp  test_Metainfo.cpp  test_main.cpp
tests/test_data/: ubuntu-test.torrent
torrent/: BencodeParser.h  Metainfo.h
torrent/src/: BencodeParser.cpp  Metainfo.cpp
